[ADD]4,6index: Adding relative position to main classes

--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -9,4 +9,10 @@ body {
 .container{
     max-width: 1000px;
     margin: 30px auto;
+    position: relative;
+}
+
+/* FIX THE OVERLAPPING OF FOOTER WITH ARTICLES */
+html {
+    position: relative;
 }
